<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="io.traxa.ui.upload.UploadActivityViewModel" />
    </data>

    <FrameLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:animateLayoutChanges="true"
            android:fitsSystemWindows="true"
            tools:context=".ui.upload.UploadActivity">

            <io.traxa.ui.views.TruckAnimation
                android:id="@+id/truckAnimation"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:elevation="8dp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:background="@color/lightGray"
                android:elevation="4dp">

                <nl.dionsegijn.konfetti.KonfettiView
                    android:id="@+id/viewKonfettiSmall"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:animateLayoutChanges="true"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingTop="48dp">

                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="32dp"
                        android:visibility="gone">

                        <io.traxa.ui.views.Pulser
                            android:id="@+id/pulser"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center" />

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_gravity="center"
                            app:srcCompat="@mipmap/ic_launcher_foreground" />

                    </FrameLayout>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txtTimer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:text="@{viewModel.timeLeft}"
                        android:textAlignment="center"
                        android:textSize="41sp"
                        android:visibility="gone" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txtLoadingMessage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txtLoadingSubtitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="4dp"
                        android:text="@string/upload_container_subtitle"
                        android:textAlignment="center"
                        android:textSize="15sp"
                        android:visibility="gone" />

                    <com.google.android.material.progressindicator.LinearProgressIndicator
                        android:id="@+id/progressIndicator"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="64dp"
                        android:layout_marginTop="16dp"
                        android:max="100"
                        android:progress="@{viewModel.recordingUploadProgress}"
                        android:scaleY="1.3"
                        app:trackCornerRadius="2dp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnWallet"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="21dp"
                        android:layout_marginBottom="32dp"
                        android:onClick="@{(v) -> viewModel.monitorWallet(v)}"
                        android:paddingVertical="8dp"
                        android:text="@string/upload_open_nft_button"
                        android:visibility="@{viewModel.isMonitorWalletVisible ? View.VISIBLE : View.INVISIBLE}"
                        app:cornerRadius="14dp"
                        app:icon="@drawable/ic_container"
                        app:iconGravity="textTop"
                        app:iconPadding="16dp"
                        app:iconTint="@color/gold"
                        app:iconTintMode="multiply" />

                </androidx.appcompat.widget.LinearLayoutCompat>


            </FrameLayout>


            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/lyt_feedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:selectableItemBackground"
                android:gravity="center_vertical"
                android:onClick="@{viewModel::shareFeedback}"
                android:padding="16dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/circle_background"
                    android:backgroundTint="@color/gray"
                    android:padding="12dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_baseline_feedback_24" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Feedback"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/share_feedback" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/lyt_community"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:selectableItemBackground"
                android:gravity="center_vertical"
                android:onClick="@{viewModel::shareDiscord}"
                android:padding="16dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/circle_background"
                    android:backgroundTint="@color/gray"
                    android:padding="12dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_discord_logo_white" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Community"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/join_our_discord" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="16dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/circle_background"
                    android:backgroundTint="@color/gold"
                    android:padding="12dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_baseline_info" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <io.traxa.ui.views.SlidingPanel
                        android:id="@+id/slidingPanel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <FrameLayout
            android:id="@+id/lyt_message"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:background="@color/white">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="32dp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:tint="@color/blue"
                        android:elevation="100dp"
                        android:layout_gravity="end"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="18dp"
                        android:src="@drawable/ic_recommended_black"/>

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        app:cardElevation="8dp"
                        android:layout_margin="16dp"
                        app:cardCornerRadius="64dp">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:background="@drawable/circle_background"
                            android:backgroundTint="@color/white"
                            android:padding="16dp"
                            android:layout_marginBottom="32dp"
                            android:src="@drawable/ic_containers"/>

                    </com.google.android.material.card.MaterialCardView>

                </FrameLayout>


                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="36sp"
                    style="@style/TextAppearance.MaterialComponents.Headline5"
                    android:text="@string/upload_message_title"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txt_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:textSize="17sp"
                    android:text="@string/upload_message_subtitle"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <nl.dionsegijn.konfetti.KonfettiView
                android:id="@+id/viewKonfetti"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </FrameLayout>

    </FrameLayout>

</layout>